--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,1 +1,8 @@
-<h1 class="text-3xl font-bold underline">Olá mundo</h1>
+<div class="flex flex-col md:flex-row relative">
+  <app-navigation />
+  <main class="max-w-[1600px] md:pl-[300px] w-full min-h-screen mx-auto">
+    <router-outlet />
+  </main>
+</div>
+
+<app-modals-container />
