--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,3 @@
-<h1>Header</h1>
+<div class="flex flex-col p-4 md:hidden">
+  <i-tabler name="menu-2" class="cursor-pointer" (click)="openMenu()" />
+</div>
