--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,2 +1,2 @@
-<app-navbar />
-<app-header />
+<app-navbar [opened]="navbarOpen" (openedChange)="navbarOpen = $event" />
+<app-header (setOpened)="navbarOpen = !navbarOpen" />
