--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,7 +23,15 @@
             Seu vencimento é no dia
             <span class="font-bold">22/04/2025</span>
           </div>
-          <!-- Botão aqui -->
+          <ng-template #rightSectionArrowButton>
+            <i-tabler name="arrow-right" class="text-primary rotate-45" />
+          </ng-template>
+          <app-button
+            tooltip="Saiba mais"
+            class="mt-2 min-w-0 w-fit"
+            [rightSection]="rightSectionArrowButton"
+            >Saiba mais</app-button
+          >
         </div>
       </div>
       <div class="flex flex-row gap-5 xs:gap-10 mt-10">
