--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -45,12 +45,15 @@
     </div>
     <div class="mt-10">
       <!-- Transactions List -->
+      <app-transactions-list />
     </div>
   </div>
   <div
     class="bg-constrast fixed w-[20%] xl:w-[calc(50%-100px)] right-0 flex-1 h-screen py-10 px-20 hidden xl:block"
   >
-    <!-- Home Info Section -->
-    <app-home-info-section />
+    <div class="max-w-[500px]">
+      <!-- Home Info Section -->
+      <app-home-info-section />
+    </div>
   </div>
 </div>
