--- a/src/styles.css
+++ b/src/styles.css
@@ -22,10 +22,10 @@
 }
 
 body {
-  background-color: var(--bg);
-  color: var(--text);
   font-family: "Inter", sans-serif;
   font-weight: 300;
+
+  @apply bg-bg text-text;
 }
 
 input {
