--- a/src/app/features/transactions/components/list/transaction-list.component.html
+++ b/src/app/features/transactions/components/list/transaction-list.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="flex items-center justify-between mb-5">
     <h3 class="font-bold text-xl">Transações</h3>
-    <!-- Create Transaction Button -->
+    <app-create-transaction-button />
   </div>
 
   <ul
