--- a/src/app/shared/modals/container/container.component.html
+++ b/src/app/shared/modals/container/container.component.html
@@ -1,1 +1,17 @@
-<h1>Modals Container</h1>
+<div
+  id="modals-container"
+  class="fixed w-screen h-screen top-0 z-30"
+  [class.hidden]="!isAnyModalOpen()"
+>
+  <div class="relative w-full h-full">
+    <div
+      class="relative flex flex-col items-center justify-center w-full h-full z-50"
+    >
+      <app-create-transaction-modal />
+      <!-- Update Transaction Modal -->
+    </div>
+    <div
+      class="absolute top-0 w-screen h-screen bg-black opacity-80 z-40"
+    ></div>
+  </div>
+</div>
