--- a/src/app/shared/modals/container/container.component.html
+++ b/src/app/shared/modals/container/container.component.html
@@ -8,6 +8,7 @@
       class="relative flex flex-col items-center justify-center w-full h-full z-50"
     >
       <app-create-transaction-modal />
+      <app-update-transaction-modal />
       <!-- Update Transaction Modal -->
     </div>
     <div
