--- a/src/app/features/transactions/modals/create-transaction-modal/create-transaction-modal.component.html
+++ b/src/app/features/transactions/modals/create-transaction-modal/create-transaction-modal.component.html
@@ -3,5 +3,5 @@
   [name]="modalName"
   id="create-transaction-modal"
 >
-  Conteúdo
+  <app-default-transaction-form (submitForm)="onSubmit($event)" />
 </app-modal>
